<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.erica.recsfromtechs.Profile"
    tools:showIn="@layout/activity_edit_profile"
    android:background="#333333"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#B9090B"
        android:textStyle="bold"
        android:background="#231f20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/username"
        android:id="@+id/username"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#B9090B"
        android:textStyle="bold"
        android:background="#231f20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/password"
        android:id="@+id/password"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#B9090B"
        android:textStyle="bold"
        android:background="#231f20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/email"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#B9090B"
        android:textStyle="bold"
        android:background="#231f20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/major"
        android:id="@+id/major"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#B9090B"
        android:textStyle="bold"
        android:background="#231f20"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText android:id="@+id/newName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/newName"
        android:textColorHint="#FFFFFF"
        android:textColor = "#FFFFFF"
        />
    <Button
        android:id="@+id/nameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editName"
        android:onClick="editName"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/newUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/newUsername"
            android:textColorHint = "#FFFFFF"
            android:textColor = "#FFFFFF"/>
        <Button
            android:id="@+id/usernameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/editUsername"
            android:onClick="editUsername"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword"
            android:textColorHint = "#FFFFFF"
            android:textColor = "#FFFFFF"/>
        <Button
            android:id="@+id/passwordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/editPassword"
            android:onClick="editPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText android:id="@+id/newEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/newEmail"
        android:textColorHint = "#FFFFFF"
        android:textColor = "#FFFFFF"/>
    <Button
        android:id="@+id/emailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/editEmail"
        android:onClick="editEmail"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <EditText android:id="@+id/newMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/newMajor"
        android:textColorHint = "#FFFFFF"
        android:textColor = "#FFFFFF"/>
    <Button
        android:id="@+id/majorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/editMajor"
        android:onClick = "editMajor"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/back"
        android:onClick = "backToDashboard"/>
</LinearLayout>