<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.erica.recsfromtechs.AdminPage"
    tools:showIn="@layout/activity_admin_page">


    <Button
        android:layout_width="150dp"
        android:id="@+id/back"
        android:layout_height="150dp"
        android:text = "@string/back"
        android:textColor="@color/colorWhite"
        android:textStyle = "bold"
        android:onClick = "back"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/list3"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list3"
        android:background="@color/colorLightGray"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/currentUser"
        android:id="@+id/currentUser"
        android:layout_alignTop="@+id/back"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock"
        android:id="@+id/lock"
        android:layout_below="@+id/currentUser"
        android:layout_alignParentStart="true"
        android:onClick="lock" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlock"
        android:id="@+id/unlock"
        android:layout_below="@+id/lock"
        android:layout_alignParentStart="true"
        android:onClick="unlock" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block"
        android:id="@+id/block"
        android:layout_alignBottom="@+id/lock"
        android:layout_toStartOf="@+id/back"
        android:onClick="block" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/isBlocked"
        android:id="@+id/isblocked"
        android:layout_below="@+id/unlock"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/isLocked"
        android:id="@+id/isLocked"
        android:layout_below="@+id/isblocked"
        android:layout_alignParentStart="true" />

</RelativeLayout>
