<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.erica.recsfromtechs.Movie"
    tools:showIn="@layout/activity_movie"
    android:background="@color/colorPrimaryDark"

    android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieTitle"
            android:id="@+id/title"
            android:padding="10dp"
            android:textSize="30sp"
            android:maxLines="3"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieYear"
            android:id="@+id/year"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="86dp"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieRating"
            android:id="@+id/rating"
            android:padding="10dp"
            android:textSize="15sp"

            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_alignBottom="@+id/year"
            android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/yearReleased"
        android:textColor="@color/colorGold"
        android:id="@+id/textView"
        android:layout_above="@+id/rating"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/criticRating"
        android:textColor="@color/colorGold"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/colorGold"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rateMovie"
        android:id="@+id/textView3"
        android:layout_toEndOf="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/ratingBar2" />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar2"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:longClickable="true"
        android:numStars="5"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:progressTint="@color/colorGold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:text = "@string/back"
        android:onClick = "backToDashboard"
        android:id="@+id/backToDashboard"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:id="@+id/submit"
        android:layout_above="@+id/backToDashboard"
        android:layout_centerHorizontal="true" />


</RelativeLayout>