<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.erica.recsfromtechs.Login"
    tools:showIn="@layout/activity_login"
    android:background="#333333"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/header"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="40sp"
        android:textColor="#B9090B"
        android:textStyle="bold"
        android:background="#231f20"
        />




    <EditText android:id="@+id/username"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/password" />

    <EditText android:id="@+id/password"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/loginButton"
        android:layout_alignEnd="@+id/loginButton" />




    <Button android:id="@+id/loginButton"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:onClick="loginSuccessful"
        android:textStyle="bold"
        android:background="#B9090B"
        android:textColor="#FFFFFF"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginBottom="43dp"
        android:layout_alignEnd="@+id/button2" />



    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:clickable="true"
        android:background="#B9090B"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="99dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button2" />



</RelativeLayout>
