<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".searchScreen"
    tools:showIn="@layout/activity_search_screen"
    android:background="#3d4141">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieSearch"
        android:textStyle = "bold"
        android:id="@+id/button"
        android:onClick="searchForMovie"
        android:layout_alignParentTop="true"
        android:background="#B9090B"
        android:textColor="#FFFFFF"
        android:layout_alignEnd="@+id/list"
        android:typeface="monospace" />



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button"
        android:background="#c2c2c2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:id="@+id/editText"
        android:hint="@string/movieSearch"
        android:typeface="normal"
        android:layout_alignBottom="@+id/back"
        android:layout_toEndOf="@+id/back" />

    <ImageView
        android:contentDescription="@string/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/list" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:id="@+id/back"
        android:textColor="#FFFFFF"
        android:textStyle = "bold"
        android:onClick = "backToDashboard"
        android:background="#B9090B"

        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView2"
        android:typeface="monospace" />

</RelativeLayout>
